activate both 'aufs_git' variables.
uncomment line 36 and rename 'aufs_git' to 'aufs_git1', for auto switching servers in 'build.sh' when one doesn't work.

--- a/kernel-kit/build.conf
+++ b/kernel-kit/build.conf
@@ -32,8 +32,8 @@ kernel_mirror="http://www.kernel.org/pub/linux/kernel/v3.0/"
 # new vars
 # aufs standalone
 # if sourceforge seems unstable use the sfjro url
-#aufs_git=git://github.com/sfjro/aufs3-linux.git
-aufs_git=git://git.code.sf.net/p/aufs
+aufs_git=git://github.com/sfjro/aufs3-linux.git
+aufs_git1=git://git.code.sf.net/p/aufs
 
 # aufs utils
 aufs_utils_git=git://git.code.sf.net/p/aufs/aufs-util
